# cells

./: .gitignore  main.py  pyproject.toml  segment.ipynb
